--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'com.rometools:rome:1.12.2'
+    implementation 'org.jsoup:jsoup:1.12.1'
 }
