--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'com.rometools:rome:1.12.2'
     implementation 'org.jsoup:jsoup:1.12.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
