--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,5 @@ dependencies {
     implementation 'com.rometools:rome:1.12.2'
     implementation 'org.jsoup:jsoup:1.12.1'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation group: 'org.apache.opennlp', name: 'opennlp-tools', version: '1.9.1'
 }
