--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,8 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.12.1'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation group: 'org.apache.opennlp', name: 'opennlp-tools', version: '1.9.1'
+    //implementation group: 'edu.ucla.sspace', name: 'sspace', version: '2.0.4'
+    implementation files('libs/sspace-2.0.4.jar')
+    implementation group: 'gov.nist.math', name: 'jama', version: '1.0.3'
+    implementation group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
 }
